--- a/res/layout/badges.xml
+++ b/res/layout/badges.xml
@@ -4,7 +4,7 @@
       xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     >
     
-    	<com.google.ads.AdView  
+    	<com.google.ads.AdView editted 
           android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
