--- a/res/layout/opponent_item.xml
+++ b/res/layout/opponent_item.xml
@@ -13,7 +13,8 @@
 
      	 
 	       <ImageView 
-			 
+			 android:layout_width="fill_parent"
+			 android:layout_height="fill_parent"
 			    android:id="@+id/ivOpponent"	
 			    android:background="@drawable/image_border"
 			    android:paddingTop="1dp"
