--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,47 +6,32 @@
     <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />
 
 	<com.google.ads.AdView  
+	    
           android:id="@+id/adView"
            android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
+           android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adUnitId="@string/admob_pub_id_main_landing" 
            ads:adSize="BANNER"
            ads:testDevices="TEST_EMULATOR"
            ads:loadAdOnCreate="true"/>
-   	 <LinearLayout
-   	     android:layout_below="@id/topAreaLayout"
-         
-        android:orientation="vertical"
-        android:layout_above="@id/adView" 
-        android:layout_marginBottom="0dp"
-        >
-        <LinearLayout
- 
-        	android:layout_marginBottom="5dp"
-        	android:id="@+id/llButtons"
-         >
- 
-           <com.riotapps.word.utils.TypefaceButton 
-	  	    style="@style/MainLandingButtonStyle"
-	  	    android:id="@+id/bOptions" 
-	        android:layout_width="0dp" 
-	        android:layout_weight="1.0"
-	        android:text="@string/options"
-	    />
-		<com.riotapps.word.utils.TypefaceButton 
-	  	    style="@style/MainLandingButtonStyle"
-	  	    android:id="@+id/bBadges" 
-	        android:layout_width="0dp" 
-	        android:layout_weight="1.0"
-	        android:text="@string/badges"
-	    />
-		
-   
-    </LinearLayout>
-    		    
+  
+      <com.riotapps.word.ui.MainFontTextView
+          android:layout_below="@id/topAreaLayout"
+          android:background="@drawable/logo_bg"
+          android:paddingTop="2dp"
+          android:paddingBottom="2dp"
+          android:paddingLeft="5dp"
+          android:text="@string/main_choose"
+           
+          android:id="@+id/txtMainLabel"
+      
+          android:layout_width="fill_parent"
+          android:gravity="center"
+          />	
 	  <ScrollView   
+	      android:layout_below="@id/txtMainLabel"
     	android:layout_width="fill_parent"
     	android:layout_height="fill_parent" 
     	android:fadingEdge="none"
@@ -65,6 +50,5 @@
 	     
 	 	    
   	</ScrollView>
-   </LinearLayout>
-      
+ 
 </RelativeLayout>
