--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -5,63 +5,31 @@
         android:layout_height="wrap_content"
 		android:orientation="vertical"
       >  
-      <LinearLayout  
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-      > 
+ 
       <RelativeLayout 
         android:id="@+id/logoArea" 
     	style="@style/TopLogoAreaStyle"
     
     	>
  
-      <com.riotapps.word.ui.ScoreboardFontTextView 
-        android:id="@+id/tvHeaderContextPlayerName"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" 
-         android:layout_marginTop="7dp"
-        android:textColor="@color/scoreboard_text_color"
-	    android:textSize="11dp"
-	    android:layout_alignParentRight="true"
-        />	
-      <com.riotapps.word.ui.ScoreboardFontTextView 
-        android:id="@+id/tvHeaderContextPlayerWins"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content" 
-        android:textColor="@color/scoreboard_text_color"
-	    android:textSize="11dp"  
-	     android:layout_marginLeft="2dp"  
-        android:layout_below="@id/tvHeaderContextPlayerName"
-         android:layout_alignParentRight="true"
-        
-          />	
-      
-      <ImageView 
-        android:id="@+id/ivHeaderContextPlayerBadge"
-        android:layout_height="10dp"
-        android:layout_width="10dp"
-        android:layout_toLeftOf="@id/tvHeaderContextPlayerWins"
-        android:layout_below="@id/tvHeaderContextPlayerName"
-        
-        android:layout_marginTop="2dp"
-        android:layout_marginLeft="2dp"
- 
-        />
-     <ImageView 
-       android:id="@+id/logo"
-	    style="@style/TopLogoStyle"  
-	  />
+
 	
+        <ImageView 
+         android:id="@+id/logo"
+	     style="@style/TopLogoStyle"  
+	    />
+
+           
+       <ImageView
+          android:id="@+id/options"
+          android:layout_alignParentRight="true"
+ 		  android:layout_marginRight="4dp"
+ 		  android:layout_centerVertical="true"
+          android:src="@drawable/options" 
+		/>
+          
      </RelativeLayout>
-     </LinearLayout>
-     <LinearLayout  
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        	android:layout_marginBottom="12dp"
-      > 
-      <View
-         android:id="@+id/logoAreaBottom"
-         style="@style/TopLogoAreaBottomStyle"
-      /> 
-      </LinearLayout>
+     
+  
+    
 </LinearLayout>
