--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -54,4 +54,6 @@
 	<color name="player_image_background_color">#d2bfa6</color>
 	<color name="game_surface_fill_color">#eec591</color>
 	<color name="list_text_background">#50000000</color>
+	<color name="main_label_text_color">#fff5ee</color>
+	<color name="main_label_background_color">#3366dd</color>
 </resources>
