--- a/res/values/toplogoareastyle.xml
+++ b/res/values/toplogoareastyle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="TopLogoAreaStyle">
-        <item name="android:background">@drawable/logo_bg</item>
+        <item name="android:background">@drawable/top_bg</item>
 	    <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">40dp</item> 
     </style>
