refactor create game

--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -20,12 +20,16 @@
 	    />
 
            
-       <ImageView
+       <ImageButton 
+         
           android:id="@+id/options"
           android:layout_alignParentRight="true"
- 		  android:layout_marginRight="4dp"
+ 		  android:layout_marginRight="10dp"
  		  android:layout_centerVertical="true"
           android:src="@drawable/options" 
+             android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         android:background="@drawable/options"  
 		/>
           
      </RelativeLayout>
