moved referenced jars to libs folder

--- a/res/values/layout_thin.xml
+++ b/res/values/layout_thin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="LayoutStyle" >
+    <style name="LayoutStyleThin" >
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">@drawable/bg6</item>
