--- a/res/layout/scoreboardlayout.xml
+++ b/res/layout/scoreboardlayout.xml
@@ -8,110 +8,58 @@
     android:layout_width="fill_parent"
 	android:layout_height="30dp"
 	android:background="@drawable/sbd_bg"
+ 
     >
-    
-	      <TableLayout     
-		        android:id="@+id/scoreboardTop"
-		   	 	android:layout_height="30dp"
-		   	  
-		    	android:layout_marginLeft="3dp" 
-		       
-				android:layout_alignParentLeft="true"
-		        android:paddingLeft="4dp"
-		        android:paddingRight="4dp"  
-			    android:layout_width="wrap_content"
-		     >
-    		<TableRow android:paddingTop="2dp">
-    		     <ImageView 
-				       	android:id="@+id/ivPlayerTurn_1"
-					   	style="@style/ScoreboardTurnStyle"
-				   />
-    		     <ImageView  
-				       	android:id="@+id/ivPlayerBadge_1"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-    		     <ImageView  
-				       	android:id="@+id/ivWhiteFlag_1"
-				       	android:src="@drawable/white_flag"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayer_1"
-		            style="@style/ScoreboardPlayerStyle"
-		            />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayerScore_1"
-		           style="@style/ScoreboardScoreStyle"
- 	            />
-		         <ImageView 
-				       	android:id="@+id/ivPlayerTurn_3"
-					   	style="@style/ScoreboardTurnStyle"
-				   />
-		         <ImageView 
-				       	android:id="@+id/ivPlayerBadge_3"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		         <ImageView  
-				       	android:id="@+id/ivWhiteFlag_3"
-				       	android:src="@drawable/white_flag"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayer_3"
-		            style="@style/ScoreboardPlayerStyle"
-		            />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayerScore_3"
-		            style="@style/ScoreboardScoreStyle"
-	            />
-		       </TableRow>
-		       <TableRow>
-		        <ImageView 
-				       	android:id="@+id/ivPlayerTurn_2"
-					   	style="@style/ScoreboardTurnStyle"
-				   />
-		         <ImageView 
-				       	android:id="@+id/ivPlayerBadge_2"
-					   	style="@style/ScoreboardBadgeStyle" 
-				   />
-		         <ImageView  
-				       	android:id="@+id/ivWhiteFlag_2"
-				       	android:src="@drawable/white_flag"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayer_2"
-		            style="@style/ScoreboardPlayerStyle"
-		            />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayerScore_2"
-		            style="@style/ScoreboardScoreStyle"
-	            />
-		       <ImageView 
-				    android:id="@+id/ivPlayerTurn_4"
-					style="@style/ScoreboardTurnStyle"
-				/>
-		       <ImageView 
-				       	android:id="@+id/ivPlayerBadge_4"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		       <ImageView  
-				       	android:id="@+id/ivWhiteFlag_4"
-				       	android:src="@drawable/white_flag"
-					   	style="@style/ScoreboardBadgeStyle"
-				   />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayer_4"
-		            style="@style/ScoreboardPlayerStyle" 
-		            />
-		        <com.riotapps.word.ui.ScoreboardFontTextView
-		            android:id="@+id/tvPlayerScore_4"
-		            style="@style/ScoreboardScoreStyle"
-	            />
-		       </TableRow>
-			</TableLayout> 
-		 
-	    <RelativeLayout
+    	<ImageView 
+		    android:id="@+id/ivOpponent"
+		    android:layout_height="30dp"
+		    android:layout_width="30dp"
+		    android:layout_marginRight="3dp"
+ 
+		    />	
+		   
+		 <com.riotapps.word.ui.ScoreboardFontTextView
+	        android:id="@+id/tvOpponentName"
+	        android:layout_width="wrap_content"
+	   	 	android:layout_height="30dp" 
+	   	    android:gravity="center_vertical"
+	   	 	android:layout_toRightOf="@id/ivOpponent"
+	   	 	android:layout_marginRight="5dp"
+	  
+	 
+	   	 	android:textSize="20sp"
+	    /> 
+	      <com.riotapps.word.ui.ScoreboardFontTextView
+	        android:id="@+id/tvOpponentScore"
+	        android:layout_width="wrap_content"
+	   	 	android:layout_height="wrap_content" 
+	   	  	android:layout_marginTop="-4dp"
+	   	 	android:textSize="30sp"
+	   	 	android:layout_toRightOf="@id/tvOpponentName"
+	   	 	android:layout_marginRight="18dp"
+	   	  
+ 	    />
+	    <com.riotapps.word.ui.ScoreboardFontTextView
+	        android:text="@string/anonymous_player_name"
+	        android:id="@+id/tvPlayerName"
+	        android:layout_marginRight="5dp"
+	        android:layout_width="wrap_content"
+	   	 	android:layout_height="30dp" 
+	   	    android:gravity="center_vertical"
+	   	 	android:layout_toRightOf="@id/tvOpponentScore"
+ 			
+	   	 	android:textSize="20sp"
+	    />
+	      
+	    <com.riotapps.word.ui.ScoreboardFontTextView
+	        android:id="@+id/tvPlayerScore"
+	        android:layout_width="wrap_content"
+	   	 	android:layout_height="wrap_content" 
+ 			android:textSize="30sp"
+ 			android:layout_toRightOf="@id/tvPlayerName"
+	   	    android:layout_marginTop="-4dp"
+	    />
+ 	    <RelativeLayout
 	       android:id="@+id/scoreboardNumbers"
 	    	android:layout_width="wrap_content"
 	   	 	android:layout_height="wrap_content"
@@ -121,9 +69,8 @@
 	    >    
 	     	<com.riotapps.word.ui.ScoreboardFontTextView
 	            android:id="@+id/tvLettersLeft"
-	            android:text="98 letters left"
 	            android:textColor="@color/scoreboard_text_color"
-	            android:textSize="10dp"
+	            android:textSize="10sp"
 	            
 	            android:gravity="right"
 	          
@@ -131,7 +78,7 @@
 	     	<com.riotapps.word.ui.ScoreboardFontTextView
 	            android:id="@+id/tvNumPoints"
 	            android:textColor="@color/scoreboard_text_color"
-	            android:textSize="10dp"
+	            android:textSize="10sp"
 	            android:layout_below="@id/tvLettersLeft"
 	             
 	       		android:gravity="right"
