--- a/res/drawable-v12/form_item_top.xml
+++ b/res/drawable-v12/form_item_top.xml
@@ -3,14 +3,14 @@
 	android:shape="rectangle" 
 	android:padding="10dp"
 	 >
-    <solid android:color="@color/form_border_color"/>
+    <solid android:color="@color/title_bar_background_color"/>
     <!-- i have no idea why bottom radiuses these have to be backwards (bug in emulator)-->
     <corners 
         android:radius="2dp"
         android:bottomRightRadius="8dp"
           android:bottomLeftRadius="0dp" 
         android:topRightRadius="0dp" 
-        android:topLeftRadius="0dp"
+        android:topLeftRadius="8dp"
           
       
 	/>
