--- a/res/drawable/form_item_top.xml
+++ b/res/drawable/form_item_top.xml
@@ -3,13 +3,13 @@
 	android:shape="rectangle" 
 	android:padding="10dp"
 	 >
-    <solid android:color="@color/form_border_color"/>
+    <solid android:color="@color/title_bar_background_color"/>
     <!-- i have no idea why bottom radiuses these have to be backwards (bug in emulator)-->
     <corners 
         android:radius="2dp"
         android:bottomRightRadius="0dp"
           android:bottomLeftRadius="8dp" 
-        android:topRightRadius="0dp" 
+        android:topRightRadius="8dp" 
         android:topLeftRadius="0dp"
           
       
