--- a/res/values/stringarrays.xml
+++ b/res/values/stringarrays.xml
@@ -77,6 +77,7 @@
 		     <item>I</item>
 		     <item>I</item>
 		     <item>J</item>
+		     <item>K</item>
 		     <item>L</item>
 		     <item>L</item>
 		     <item>L</item>
