--- a/res/layout/completedgames.xml
+++ b/res/layout/completedgames.xml
@@ -43,7 +43,7 @@
 		 		android:layout_marginTop="-32dp"
 		        android:background="@drawable/form_item_top"
 		        android:textSize="14dp"
-		        android:text="@string/about_title" 
+		        android:text="@string/completed_games_title" 
 		        android:id="@+id/header"
 		        android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
@@ -59,55 +59,13 @@
         android:layout_height="wrap_content"
          android:orientation="vertical"
         >
-    <ScrollView   
-    	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent" 
-    	android:fadingEdge="none"
-    	
-    	 >
-	<LinearLayout 
-	   	android:layout_width="fill_parent"
-    	android:layout_height="fill_parent" 
-		android:orientation="vertical"
-	    > 
-
-
-<com.riotapps.word.ui.MainFontTextView
-        style="@style/ContentAreaTextStyle"
-        android:text="@string/about_main"
-        android:textSize="14dp" 
-        />
-   
- 
-   <com.riotapps.word.ui.MainFontTextView
-        style="@style/ContentAreaTextStyle" 
-        android:id="@+id/tvVersion"
-        android:textSize="14dp"
-        />
-   
-    <com.riotapps.word.ui.MainFontTextView
-        style="@style/ContentAreaTextStyle"
-        android:id="@+id/tvBuildNumber"
-        android:textSize="14dp"
-        />
-     <com.riotapps.word.ui.MainFontTextView
-        style="@style/ContentAreaTextStyle"
-        android:text="@string/about_support" 
-        android:id="@+id/tvSupportText"
-        android:textSize="14dp"
-        />
-     <com.riotapps.word.ui.MainFontTextView
-        style="@style/ContentAreaTextStyle"
-        android:id="@+id/tvSupportLink"
-        android:text="@string/about_support_link" 
-         android:background="@drawable/text_selector_bottom"
-        android:textSize="14dp"
-        />
-  	
-
- 
-</LinearLayout>
- </ScrollView> 
+    <ListView
+        android:id="@+id/lvGames"
+        >
+        
+        
+        
+    </ListView>
 </LinearLayout>
 </LinearLayout> 
    </LinearLayout> 
