--- a/res/layout/fullrules.xml
+++ b/res/layout/fullrules.xml
@@ -24,22 +24,36 @@
 
    <LinearLayout
          style="@style/LayoutFormStyle"
+                android:layout_height="fill_parent"
      
          >
 	<LinearLayout
 		style="@style/FormBackgroundStyle"
-		android:layout_marginBottom="5dp"
+					android:layout_marginTop="5dp"
+				 android:layout_marginBottom="5dp"
+				 android:orientation="vertical"
+				 android:layout_width="fill_parent"
+				 android:layout_height="fill_parent"
+		
 	>
-	<RelativeLayout
-		style="@style/FormHeaderWrapperStyle"
-		android:id="@+id/header"
-	>
-    <com.riotapps.word.ui.MainFontTextView
-        style="@style/FormHeaderAreaTextStyle"
-        android:text="@string/full_rules_title" 
-        />
-    </RelativeLayout>
-<LinearLayout 
+		<com.riotapps.word.ui.MainFontTextView
+		        style="@style/ContentAreaTextTopStyle"
+		        />
+		    <com.riotapps.word.ui.MainFontTextView
+		 		android:layout_marginTop="-32dp"
+		        android:background="@drawable/form_item_top"
+		        android:textSize="14dp"
+		        android:text="@string/full_rules_title" 
+		        android:id="@+id/header"
+		        android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textColor="@color/button_text_color"
+	 
+				android:paddingBottom="5dp"
+				android:paddingLeft="16dp"
+				android:paddingRight="16dp"
+				android:paddingTop="5dp"
+		        /><LinearLayout 
             style="@style/ContentAreaTextBottomStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
