--- a/res/layout/gamehistoryitem.xml
+++ b/res/layout/gamehistoryitem.xml
@@ -3,6 +3,7 @@
 	android:layout_width="fill_parent"    
     android:layout_height="wrap_content"
     android:focusable="false"
+    android:id="@+id/llItem"
     >
 <RelativeLayout 
     style="@style/ContentAreaTextStyle" 
