--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -37,7 +37,7 @@
     <color name="content_area_background_selected_color">#D3D3D3</color>
     <color name="content_font_color">#1874CD</color>
     <color name="form_border_color">#3366dd</color> <!-- previously 3366dd -->  
-    <color name="title_bar_background_color">#b91589</color><!-- FF0000  -->
+    <color name="title_bar_background_color">#FF0000</color><!-- FF0000  -->
     <color name="button_background_color">#D2B48C</color> 
     <color name="scoreboard_text_color">#000000</color>
     <color name="scoreboard_text_last_played_color">#FF0000</color>
