--- a/res/layout/main_opponent_item.xml
+++ b/res/layout/main_opponent_item.xml
@@ -5,6 +5,7 @@
 	android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingBottom="0dp"
+    android:background="@color/main_opponents_backgroud_color"
     android:layout_width="fill_parent"    
     android:layout_height="fill_parent" 
     android:id="@+id/rlLineItem">
