--- a/res/values/dialogstyle.xml
+++ b/res/values/dialogstyle.xml
@@ -6,8 +6,7 @@
   
     <item name="android:windowBackground">@android:color/transparent</item>
     <item name="android:windowNoTitle">true</item>
-   
-    <item name="android:textSize">16dp</item>
+    <item name="android:textSize">16sp</item>
     <item name="android:backgroundDimEnabled">true</item>
        
 </style>
