--- a/res/layout/toparealayout.xml
+++ b/res/layout/toparealayout.xml
@@ -19,7 +19,16 @@
 	     style="@style/TopLogoStyle"  
 	    />
 
-           
+       <com.riotapps.word.ui.MainFontTextView
+ 			android:id="@+id/tvActivityTitle"
+        	android:textSize="18sp" 
+        	android:layout_alignParentRight="true"
+ 		  	android:layout_marginRight="10dp"
+ 		  	android:layout_centerVertical="true"
+ 		    android:layout_width="wrap_content"
+        	android:layout_height="wrap_content"
+        	android:textColor="@color/header_text_color"
+        />
        <ImageButton 
          
           android:id="@+id/options"
