--- a/res/layout/store.xml
+++ b/res/layout/store.xml
@@ -1,40 +1,84 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
-    style="@style/LayoutThinStyle"
-    android:orientation="vertical" >
-    <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />
+     xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+    >
 
-	<com.google.ads.AdView  
-	    
-          android:id="@+id/adView"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content" 
-           android:layout_alignParentBottom="true"
-           android:layout_centerHorizontal="true"
-           ads:adUnitId="@string/admob_pub_id_main_landing" 
-           ads:adSize="BANNER"
-           ads:testDevices="TEST_EMULATOR"
-           ads:loadAdOnCreate="true"/>
-  
-      
-	  <ScrollView   
-	      android:layout_below="@id/topAreaLayout"
+<LinearLayout  
+    style="@style/LayoutStyle"
+    android:layout_marginBottom="5dp"
+    android:orientation="vertical" >
+   
+     <include android:id="@+id/topAreaLayout" layout="@layout/toparealayout" />
+
+   <LinearLayout
+         style="@style/LayoutFormStyle"
+                android:layout_height="fill_parent"
+     
+         >
+	<LinearLayout
+		style="@style/FormBackgroundStyle"
+					android:layout_marginTop="5dp"
+				 android:layout_marginBottom="5dp"
+				 android:orientation="vertical"
+				 android:layout_width="fill_parent"
+				 android:layout_height="wrap_content"
+		
+	>
+		<com.riotapps.word.ui.MainFontTextView
+		        style="@style/ContentAreaTextTopStyle"
+		        />
+		 
+		<LinearLayout 
+        style="@style/ContentAreaTextBottomStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+         android:orientation="vertical"
+        >
+    <ScrollView   
     	android:layout_width="fill_parent"
     	android:layout_height="fill_parent" 
     	android:fadingEdge="none"
- 		
+    	
     	 >
+	<RelativeLayout 
+	   	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent" 
+		android:orientation="vertical"
+	    > 
+
+
+<com.riotapps.word.ui.MainFontTextView
+        style="@style/ContentAreaTextStyle"
+		android:id="@+id/tvPremiumUpgradeTitle"
+        android:textSize="14sp" 
+        />
+  <com.riotapps.word.ui.MainFontTextView
+        style="@style/ContentAreaTextStyle"
+		android:id="@+id/tvPremiumUpgradePrice"
+        android:textSize="14dp" 
+         android:layout_below="@id/tvPremiumUpgradeTitle"
+        />
+
+
+
+  <com.riotapps.word.ui.MainFontTextView
+        style="@style/ContentAreaTextStyle"
+		android:id="@+id/tvPremiumUpgradeDescription"
+        android:textSize="14sp" 
+        android:layout_below="@id/tvPremiumUpgradePrice"
+        android:layout_marginTop="2dp"
+        />
+   
  
-			<LinearLayout 
-			     android:layout_width="fill_parent"
-    		android:layout_height="wrap_content" 
-    		android:orientation="vertical"
-			    android:id="@+id/llItems"
-			    />	
-	 
-	     
-	 	    
-  	</ScrollView>
+   	
+
  
+</RelativeLayout>
+ </ScrollView> 
+</LinearLayout>
+</LinearLayout> 
+   </LinearLayout> 
+
+</LinearLayout> 
 </RelativeLayout>
